--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ body {
     padding: 0 40px;
 }
 
+/* Add left margin when sidebar is visible */
+@media (min-width: 1201px) {
+    .container {
+        margin-left: 280px;
+        margin-right: auto;
+    }
+}
+
 /* Fixed Info Sidebar - LEFT SIDE */
 .info-sidebar {
     position: fixed;
